# MainProj

./: .gitignore  CMakeLists.txt  README.md
src/: SI.c  SI.h  main.c  thread1_utils.c  thread1_utils.h  utils.c  utils.h
